Se modificó el código con un setTimeOut para ver la actualización de los libros, en la actividad de la lección 2 de CAMPUS

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                 <a href="./index.html" target="_blank"> AC2. Fetch y Axios </a>
             </li>
             <li>
-                <a href="./LECCIÓN 2/listaDeCompras.html" target="_blank"> AP2. GESTIÓN DE LISTA DE COMPRAS </a>
+                <a href="Lección_2/biblioteca.js" target="_blank"> AP2. GESTIÓN DE UNA BIBLIOTECA DE LIBROS (CONSOLA) </a>
             </li>        
         
         </ul>  
