Se añadieron los ejercicios de clase a la página principal index.html

--- a/index.html
+++ b/index.html
@@ -41,7 +41,13 @@
         <h2 class="lecciones"> LECCIÓN 2. Callbacks and JSON</h2>
         <ul>
             <li>
-                <a href="./index.html" target="_blank"> AC2. Fetch y Axios </a>
+                <a href="Lección_2/Asincronismo/async.js" target="_blank"> AC2.1. ASYNC Y AWAIT </a>
+            </li>
+            <li>
+                <a href="Lección_2/Asincronismo/callback.js" target="_blank"> AC2.2. CALLBACKS </a>
+            </li>
+            <li>
+                <a href="Lección_2/Asincronismo/promesa.js" target="_blank"> AC2.3. PROMESAS </a>
             </li>
             <li>
                 <a href="Lección_2/biblioteca.js" target="_blank"> AP2. GESTIÓN DE UNA BIBLIOTECA DE LIBROS (CONSOLA) </a>
