Se añadio la actividad de la lección 3 a la página principal, al igual que se modificó los titulos de las actividades de la lección 2

--- a/index.html
+++ b/index.html
@@ -41,16 +41,16 @@
         <h2 class="lecciones"> LECCIÓN 2. Callbacks and JSON</h2>
         <ul>
             <li>
-                <a href="Lección_2/Asincronismo/async.js" target="_blank"> AC2.1. ASYNC Y AWAIT (CONSOLA) </a>
+                <a href="Lección_2/Asincronismo/async.js" target="_blank"> AC2.1. ASYNC Y AWAIT (TERMINAL) </a>
             </li>
             <li>
-                <a href="Lección_2/Asincronismo/callback.js" target="_blank"> AC2.2. CALLBACKS (CONSOLA) </a>
+                <a href="Lección_2/Asincronismo/callback.js" target="_blank"> AC2.2. CALLBACKS (TERMINAL) </a>
             </li>
             <li>
-                <a href="Lección_2/Asincronismo/promesa.js" target="_blank"> AC2.3. PROMESAS (CONSOLA) </a>
+                <a href="Lección_2/Asincronismo/promesa.js" target="_blank"> AC2.3. PROMESAS (TERMINAL) </a>
             </li>
             <li>
-                <a href="Lección_2/biblioteca.js" target="_blank"> AP2. GESTIÓN DE UNA BIBLIOTECA DE LIBROS (CONSOLA) </a>
+                <a href="Lección_2/biblioteca.js" target="_blank"> AP2. GESTIÓN DE UNA BIBLIOTECA DE LIBROS (TERMINAL) </a>
             </li>        
         
         </ul>  
@@ -60,10 +60,10 @@
         <h2 class="lecciones"> LECCIÓN 3. Fetch y Axios </h2>
         <ul>
             <li>
-                <a href="./LECCIÓN 3/index.html" target="_blank"> AC3. - </a>
+                <a href="leccion-3/index.html" target="_blank"> AC3. APP DE RICK AND MORTY (MODIFICADO PARA ACTIVIDAD DE CAMPUS) </a>
             </li>
             <li>
-                <a href="./LECCIÓN 3/filtroYOrden.html" target="_blank"> AP3. - </a>
+                <a href="leccion-3/index.html" target="_blank"> AP3. APP DE RICK AND MORTY (CON MÉTODO DE FETCH Y AXIOS) </a>
             </li>
         </ul>  
     </div>
