Se levanto el servidor local

--- a/gestor-tareas/index.html
+++ b/gestor-tareas/index.html
@@ -17,7 +17,7 @@
             <div class="list-header">
                 <h2> Por hacer </h2>
             </div>
-            <div class="cards-container">
+            <div class="cards-container" id="pendiente">
                 <div class="card"> 
                     <div class="text-card">
                     </div>
@@ -39,7 +39,7 @@
             <div class="list-header">
                 <h2> En progreso </h2>
             </div>
-            <div class="cards-container">
+            <div class="cards-container" id="en-progreso">
                 <div class="card"> 
                     <div class="text-card">
                     </div>
@@ -61,7 +61,7 @@
             <div class="list-header">
                 <h2> Hecho </h2>
             </div>
-            <div class="cards-container">
+            <div class="cards-container" id="terminada">
                 <div class="card"> 
                     <div class="text-card">
                     </div>
@@ -80,6 +80,9 @@
             </div>
         </div>
     </div>
+
+    <script src="app.js"></script>
+    
 </body>
 
 </html>
