--- a/index.html
+++ b/index.html
@@ -134,6 +134,9 @@
             <li>
                 <a href="./LECCIÓN 8/gestorNotas.html" target="_blank"> AP8. - </a>
             </li>
+            <li>
+                <a href="gestor-tareas/index.html" target="_blank"> PROYECTO FINAL. TREWO </a>
+            </li>
         </ul>  
     </div>
 </body>
