Se mejoró el acceso a actividades de asicronismo hecho en clase y se añadió la actividad 4 a la página principal index.html

--- a/index.html
+++ b/index.html
@@ -41,13 +41,7 @@
         <h2 class="lecciones"> LECCIÓN 2. Callbacks and JSON</h2>
         <ul>
             <li>
-                <a href="Lección_2/Asincronismo/async.js" target="_blank"> AC2.1. ASYNC Y AWAIT (TERMINAL) </a>
-            </li>
-            <li>
-                <a href="Lección_2/Asincronismo/callback.js" target="_blank"> AC2.2. CALLBACKS (TERMINAL) </a>
-            </li>
-            <li>
-                <a href="Lección_2/Asincronismo/promesa.js" target="_blank"> AC2.3. PROMESAS (TERMINAL) </a>
+                <a href="Lección_2/Asincronismo/index.html" target="_blank"> AC2. ASINCRONISMO </a>
             </li>
             <li>
                 <a href="Lección_2/biblioteca.js" target="_blank"> AP2. GESTIÓN DE UNA BIBLIOTECA DE LIBROS (TERMINAL) </a>
@@ -72,13 +66,13 @@
         <h2 class="lecciones"> LECCIÓN 4. Promesas y Async/Await </h2>
         <ul>
             <li>
-                <a href="./LECCIÓN 4. PUNTEROS/index.html" target="_blank"> AC4.- </a>
+                <a href="./Lección_2/Asincronismo/index.html" target="_blank"> AC4. ASYNC/AWAIT Y PROMESAS</a>
             </li>
             <li>
                 <a href="./LECCIÓN 7/suma.html" target="_blank"> EP1. - </a>
             </li>
             <li>
-                <a href="./LECCIÓN 4. PUNTEROS/parNombres.html" target="_blank"> AP4. - </a>
+                <a href="./LECCIÓN 4. PUNTEROS/parNombres.html" target="_blank"> AP4. SISTEMA DE RESERVAS PARA UN RESTAURANTE </a>
             </li>
         </ul>  
     </div>
