Se agrego la actividad de la lección 6 a la página principal index.html

--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
                 <a href="./LECCIÓN 7/suma.html" target="_blank"> EP2. - </a>
             </li>
             <li>
-                <a href="./LECCIÓN 6/backtracking.html" target="_blank"> AP6. - </a>
+                <a href="./Lección_6/index.html" target="_blank"> AP6. VALIDACIÓN DE UN FORMULARIO DE REGISTRO CON ZOD </a>
             </li>
         </ul>  
     </div>
