Se añadió la tarea de la lección 7 a la página principal index.html

--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
                 <a href="./LECCIÓN 7/suma.html" target="_blank"> EP3. - </a>
             </li>
             <li>
-                <a href="./LECCIÓN 7/máximo.html" target="_blank"> AP7. - </a>
+                <a href="./Lección_7/mi-exploracion-espacial/index.js" target="_blank"> AP7. TALLER: ¡NODE.JS PARA NOVATOS AVENTUREROS!</a>
             </li>
         </ul>  
     </div>
