Se agrego la tarea hecha durante la clase del 20 de mayo CRUD-APP, se arreglo el roblema del formato del precio ya que lo guardaba como string y ahora se guarda como numero.Tambien le agrege un scroll para que se vea mejor

--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
                 <a href="./LECCIÓN 7/suma.html" target="_blank"> EP1. - </a>
             </li>
             <li>
-                <a href="./LECCIÓN 4. PUNTEROS/parNombres.html" target="_blank"> AP4. SISTEMA DE RESERVAS PARA UN RESTAURANTE </a>
+                <a href="./Lección_4/restaurante.html" target="_blank"> AP4. SISTEMA DE RESERVAS PARA UN RESTAURANTE </a>
             </li>
         </ul>  
     </div>
@@ -93,7 +93,7 @@
         <h2 class="lecciones"> LECCIÓN 6. Validación de formularios con Zod </h2>
         <ul>
             <li>
-                <a href="./LECCIÓN 6/index.html" target="_blank"> AC6. - </a>
+                <a href="./LECCIÓN 6/index.html" target="_blank"> AC6. CRUD-APP </a>
             </li>
             <li>
                 <a href="./LECCIÓN 7/suma.html" target="_blank"> EP2. - </a>
@@ -108,9 +108,6 @@
         <h2 class="lecciones"> LECCIÓN 7. Intro a Node.js y npm </h2>
         <ul>
             <li>
-                <a href="./LECCIÓN 7/index.html" target="_blank"> AC7. - </a>
-            </li>
-            <li>
                 <a href="./LECCIÓN 7/suma.html" target="_blank"> EP3. - </a>
             </li>
             <li>
@@ -123,10 +120,7 @@
         <h2 class="lecciones"> LECCIÓN 8. Intro a Vite </h2>
         <ul>
             <li>
-                <a href="./LECCIÓN 8/index.js" target="_blank"> AC8. -  </a>
-            </li>
-            <li>
-                <a href="./LECCIÓN 8/gestorNotas.html" target="_blank"> AP8. - </a>
+                <a href="./leccion-8/adivina-el-numero/main.js" target="_blank"> AP8. TALLER/WORKSHOP: ¡CREA TU PROPIO "ADIVINA EL NÚMERO" CON VITE!</a>
             </li>
             <li>
                 <a href="gestor-tareas/index.html" target="_blank"> PROYECTO FINAL. TREWO </a>
