Se modificó la fecha de las dos últimas clase del módulo 3

--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
         <h2 class="lecciones"> LECCIÓN 6. Validación de formularios con Zod </h2>
         <ul>
             <li>
-                <a href="./LECCIÓN 6/index.html" target="_blank"> AC6. CRUD-APP </a>
+                <a href="./Lección_6/CRUD-APP/index.html" target="_blank"> AC6. CRUD-APP </a>
             </li>
             <li>
                 <a href="./LECCIÓN 7/suma.html" target="_blank"> EP2. - </a>
